# mmkit

./: README.md  pyproject.toml
docs/: api.rst  conf.py  development.rst  getting_started.rst  index.rst  usage.rst
docs/_static/: custom.css
docs/_templates/autosummary/: class.rst
docs/api/: adduct.rst  compound.rst  formula.rst
mmkit/: Adduct.py  Compound.py  Formula.py  __init__.py  _parsing.py
tests/: TestAdduct.py  TestCompound.py  TestFormula.py
