[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmkit"
version = "0.1.0"
description = ""
authors = [
    { name = "Motohiro Ogawa" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = [
    "rdkit",
    "bidict"
]

[project.optional-dependencies]
docs = [
    "sphinx>=8",
    "furo",
    "sphinx-autodoc-typehints",
    "myst-parser",
]

[tool.mypy]
files = ["mmkit"]
show_error_codes = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[tool.pytest.ini_options]
testpaths = ["tests"]